buildscript {
    configurations.classpath {
        resolutionStrategy.activateDependencyLocking()
    }
}

plugins {
    // https://plugins.gradle.org/plugin/org.springframework.boot
    id 'org.springframework.boot' version "${SPRING_BOOT_VERSION}"
    // https://plugins.gradle.org/plugin/io.spring.dependency-management
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
}

group = 'uk.me.jeremygreen'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation "org.springframework.boot:spring-boot-starter-web:${SPRING_BOOT_VERSION}"
    implementation "com.amazonaws.serverless:aws-serverless-java-container-spring:1.3.2"
    runtimeOnly "org.springframework.boot:spring-boot-devtools:${SPRING_BOOT_VERSION}"
    annotationProcessor "org.springframework:spring-context-indexer:6.1.1"
    testImplementation "org.springframework.boot:spring-boot-starter-test:${SPRING_BOOT_VERSION}"
    testImplementation "junit:junit:4.13"
}

// Add React frontend artifacts to the jar.
bootJar.dependsOn('src:frontend:npm_run_build')
bootJar {
    from("${project('src:frontend').projectDir}/build") {
	into("public")
    }
}

test.dependsOn('src:frontend:npm_run_ci')
